--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
     </div>
 
     <!-- SECTION: Scripts -->
-    <script src="script_plano.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
+
